[tool.poetry]
name = "leetcode-py"
version = "0.1.0"
description = ""
authors = ["bioerrorlog <bioerrorlog.contact@gmail.com>"]
readme = "README.md"
packages = [{include = "leetcode_py"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
